--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/react-dom": "^19.2.3",
     "prettier": "^3.7.4",
     "prisma": "^7.2.0"
   },
@@ -21,6 +22,8 @@
     "@elysiajs/static": "^1.4.7",
     "@prisma/adapter-libsql": "^7.2.0",
     "@prisma/client": "^7.2.0",
-    "elysia": "^1.4.19"
+    "elysia": "^1.4.19",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   }
 }
