--- a/package.json
+++ b/package.json
@@ -2,20 +2,10 @@
   "name": "pi-weather-station",
   "module": "index.ts",
   "type": "module",
-  "private": true,
   "scripts": {
     "start": "bun src/index.ts",
     "typegen": "prisma generate",
     "format": "prettier --write ."
-  },
-  "devDependencies": {
-    "@types/bun": "latest",
-    "@types/react-dom": "^19.2.3",
-    "prettier": "^3.7.4",
-    "prisma": "^7.2.0"
-  },
-  "peerDependencies": {
-    "typescript": "^5"
   },
   "dependencies": {
     "@elysiajs/cron": "^1.4.1",
@@ -25,5 +15,14 @@
     "elysia": "^1.4.19",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
+  },
+  "devDependencies": {
+    "@types/bun": "^1.3.5",
+    "@types/react-dom": "^19.2.3",
+    "prettier": "^3.7.4",
+    "prisma": "^7.2.0"
+  },
+  "peerDependencies": {
+    "typescript": "^5.9.3"
   }
 }
